--- a/README.rdoc
+++ b/README.rdoc
@@ -1,34 +1,10 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+1: Clone the repository by using git clone command
+2: Modify the username in database.yml to postgresql username
+3: Run rake db:create to create databases
+4: Run rake db:migrate 
+5: Fireup WebRick and point your browser to http://localhost:3000/ingredients
+6: You should be able to upload Ingredient of a Recipe alongwith its name.
 
-Things you may want to cover:
 
-* Ruby version 2.1.5p273
-
-* System dependencies 
-
-* Configuration
-
-* Database creation (you need to modify username in database.yml) rake db:create rake db:migrate
-
-* Database initialization 
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-Step 1: Clone the repository by using git clone command
-Step 2: Modify the username in database.yml to postgresql username
-Step 3: Run rake db:create to create databases
-Step 4: Run rake db:migrate 
-Step 5: Fireup WebRick and point your browser to http://localhost:3000/ingredients
-Step 6: You should be able to upload Ingredient of a Recipe alongwith its name.
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
